# fungible-token

./: CHANGELOG.md  Cargo.toml  Makefile
.github/workflows/: build.yml
io/: Cargo.toml
io/src/: lib.rs
src/: contract.rs  lib.rs
state/: Cargo.toml
tests/: node-tests.rs  tests.rs
