[package]
name = "fungible-token"
version = "1.5.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "dn-reply-provision", features = ["debug"] }
ft-io = { path = "io" }
hashbrown = "0.13"
gmeta = { git = "https://github.com/gear-tech/gear", branch = "dn-reply-provision" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
crc32fast = { version = "1.3.2", default-features = false }

[dev-dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "dn-reply-provision", features = ["debug"] }
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "dn-reply-provision" }
gclient = { git = "https://github.com/gear-tech/gear.git", branch = "dn-reply-provision" }
tokio = "1"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "dn-reply-provision" }
ft-io = { path = "io" }

[features]
# Used for inserting constants with WASM binaries (NOT paths) of the contract in
# the root crate. Usually these constants used in gclient tests instead of
# strings with paths to the binaries in the "target" directory. If you don't
# like this approach or don't use gclient tests, you can freely remove this
# feature from here and from the rest of the code.
binary-vendor = []

[workspace]
members = ["state"]
