[package]
name = "ft-io"
version = "0.1.5"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "dn-reply-provision" }
gmeta = { git = "https://github.com/gear-tech/gear", branch = "dn-reply-provision" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
