[package]
name = "ft-state"
version = "0.1.5"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear", branch = "dn-reply-provision" }
gmeta = { git = "https://github.com/gear-tech/gear", branch = "dn-reply-provision", features = ["codegen"] }
ft-io = { path = "../io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", branch = "dn-reply-provision", features = ["metawasm"] }
